[package]
#name = "autopy"
name = "guibotdcpy"
version = "0.1.0"
authors = ["Michael Sanders <crates@michaelsande.rs>", "Plamen Dimitrov <plamen.dimitrov@intra2net.com>"]

[lib]
## Python extension modules should be compiled as 'cdylib'
crate-type = ["cdylib"]
name = "autopy"

[dependencies.autopilot]
version = "0.4.0"

[dependencies.pyo3]
version = "0.8.1"
default-features = false
# ⚠ Warning: Failed to set rpath for /g8/5.programs/6.libraries/guibot-dc/guibot-dc-py/target/debug/libautopy.so: Failed to execute 'patchelf', did you install it? Hint: Try `pip install maturin[patchelf]` (or just `pip install patchelf`)
features = ["extension-module"]

[dependencies.image]
version = "0.22.4"

[dependencies.either]
version = "1.5.0"

[dependencies.libc]
version = "0.2.66"
