[package]
#name = "autopy"
name = "guibotdcpy"
version = "0.1.0"
edition = "2021"
authors = ["Michael Sanders <crates@michaelsande.rs>", "Plamen Dimitrov <plamen.dimitrov@intra2net.com>"]

[lib]
## Python extension modules should be compiled as 'cdylib'
crate-type = ["cdylib"]
name = "autopy"

[dependencies.autopilot]
version = "0.4.0"
path = ".."

[dependencies.pyo3]
version = "0.23.5"
#default-features = false
#features = ["extension-module", "macros"]

[dependencies.image]
version = "0.22.4"

[dependencies.either]
version = "1.5.0"

[dependencies.libc]
version = "0.2.66"
